fixed sidebar alignment and design changes

--- a/src/Pages/Developers/Developers.scss
+++ b/src/Pages/Developers/Developers.scss
@@ -181,6 +181,7 @@
   align-items: center;
   flex-wrap: wrap;
   flex-direction: row;
+  transition: 0.2s;
   // margin-top: 1.5rem;
 }
 .skills .skill_boxes {
